Fixed mainpage icon layout problems.

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -106,11 +106,6 @@ body {
 
 }
 
-.main-icon {
-    padding-left: 50px;
-    padding-right: 50px;
-    margin-bottom: 0;
-}
 
 #info-row {
     margin-top: 1.5em;
@@ -186,12 +181,6 @@ body {
     width: 260px;
     padding: 10px;
     padding-top: 0px;
-}
-
-@media(min-width: 992px) {
-
-
-
 }
 
 
